--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Zhen Chen"
 title_separator          : "-"
 name                     : &name "Zhen Chen"
 description              : &description "personal description"
-url                      : https://baile035.github.io/chenz_CV/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://baile035.github.io/chenz_CV # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "baile035/chenz_CV"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
