--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Zhen Chen"
   avatar           : "ChenZhen.png"
-  bio              : "Ph.D, Associate Professor, CityU"
-  location         : "HongKong, China"
+  bio              : "Ph.D, Research Fellow, University of Macau"
+  location         : "Macau, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=9noX9qoAAAAJ&hl=zh-CN"
